rename from Cz.Tools.FileExchange to CZ.Azure.FileExchange

--- a/src/CZ.Azure.FileExchange/Pages/Download.razor
+++ b/src/CZ.Azure.FileExchange/Pages/Download.razor
@@ -1,6 +1,6 @@
 ﻿@page "/download"
-@using Azure.Storage.Blobs
-@using Azure.Storage.Blobs.Models
+@using global::Azure.Storage.Blobs
+@using global::Azure.Storage.Blobs.Models
 @inject HttpClient http
 
 <h1>Download</h1>
