--- a/src/CZ.Azure.FileExchange/Pages/Index.razor
+++ b/src/CZ.Azure.FileExchange/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
-@using Azure.Storage.Blobs
-@using Azure.Storage.Blobs.Models
-@using Cz.Tools.FileExchange.Components
+@using global::Azure.Storage.Blobs
+@using global::Azure.Storage.Blobs.Models
+@using CZ.Azure.FileExchange.Components
 @inject HttpClient http
 
 <PageTitle>FileExchange</PageTitle>
