--- a/src/CZ.Azure.FileExchange/_Imports.razor
+++ b/src/CZ.Azure.FileExchange/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Cz.Tools.FileExchange
-@using Cz.Tools.FileExchange.Shared
+@using CZ.Azure.FileExchange
+@using CZ.Azure.FileExchange.Shared
