add more percision to the size

--- a/src/CZ.Azure.FileExchange/Pages/Download.razor
+++ b/src/CZ.Azure.FileExchange/Pages/Download.razor
@@ -17,7 +17,7 @@
 			</div>
 			<div class="col-3">
 				@{
-					var size = blob.Properties.ContentLength / 1024 / 1024;
+					double size = blob.Properties.ContentLength / 1024 / 1024;
 				}
 				@size MB
 			</div>
