--- a/src/CZ.Azure.FileExchange/Shared/MainLayout.razor
+++ b/src/CZ.Azure.FileExchange/Shared/MainLayout.razor
@@ -1,17 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<header>
+    <h1>Azure File Exchange</h1>
+    <NavMenu />
+</header>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+<main>
+    @Body
+</main>
