--- a/src/CZ.Azure.FileExchange/Shared/NavMenu.razor
+++ b/src/CZ.Azure.FileExchange/Shared/NavMenu.razor
@@ -1,34 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">CZ.Azure.FileExchange</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Upload
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="download">
-                <span class="oi oi-plus" aria-hidden="true"></span> Download
-            </NavLink>
-        </div>
-    </nav>
-</div>
+﻿<nav>
+    <NavLink href="./" Match="NavLinkMatch.All">Upload</NavLink>
+    <NavLink href="download">Download</NavLink>
+</nav>
 
 @code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
 }
