--- a/src/CZ.Azure.FileExchange/Client/styles/main.scss
+++ b/src/CZ.Azure.FileExchange/Client/styles/main.scss
@@ -18,6 +18,7 @@
 @use "./components/blazor-error";
 @use "./components/blazor-splash";
 @use "./components/button";
+@use "./components/input-text";
 
 @use "./pages/index";
 @use "./pages/download";
