--- a/src/CZ.Azure.FileExchange/Client/styles/layout/_main.scss
+++ b/src/CZ.Azure.FileExchange/Client/styles/layout/_main.scss
@@ -2,6 +2,7 @@ main{
     width: 80vw;
     margin: 0 auto;
     padding-top: 1em;
+    margin-bottom: 1em;
 
     section{
         text-align: center;
