--- a/src/CZ.Azure.FileExchange/Pages/Download.razor
+++ b/src/CZ.Azure.FileExchange/Pages/Download.razor
@@ -5,6 +5,7 @@
 
 <PageTitle>Download - Azure File Exchange</PageTitle>
 
+<main class="download">
 <section>
     <p>
         Download your files by inserting your code below.
@@ -12,24 +13,19 @@
 </section>
 
 <section class="download-input">
-	<input type="text" @bind-value=Code/>
-	<button	class="btn btn-primary" @onclick="LoadFiles">Load files</button>
+	<label for="txtguid" class="floating-label">Enter the download ID</label>
+	<input type="text" id="txtguid" @bind="Code" @bind:event="oninput"/>
+	<button class="glass" disabled="@(!(Guid.TryParse( Code, out _)))" @onclick="LoadFiles">Load files</button>
 </section>
 
 <section>
 	@foreach (var blob in blobs)
 	{
-		<div>
-			<div>
-				@blob.Name
-			</div>
-			<div>
-				@AutoFileSize(blob.Properties.ContentLength)
-			</div>
-			<div>
-				<a href="@GetFileLink(blob.Name)">Download</a>
-			</div>
+		<div class="file">
+			<div class="name">@blob.Name</div>
+			<div class="size">@AutoFileSize(blob.Properties.ContentLength)</div>
+			<div class="link"><a href="@GetFileLink(blob.Name)"><i class="gg-software-download"></i></a></div>
 		</div>
 	}
 </section>
-
+</main>
