Simplifi splash screen
- Fix some minor issues

--- a/src/CZ.Azure.FileExchange/Pages/Index.razor
+++ b/src/CZ.Azure.FileExchange/Pages/Index.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>Upload - Azure File Exchange</PageTitle>
 
-<main class=upload>
+<main class="upload">
 <section>
     <p>
         Upload your files by dropping them below or select them by clicking in the box below.
