--- a/src/CZ.Azure.FileExchange/Client/styles/components/_blazor-splash.scss
+++ b/src/CZ.Azure.FileExchange/Client/styles/components/_blazor-splash.scss
@@ -4,38 +4,14 @@
 
 #app {
 
-    .splash {
-        position: absolute;
-        top: 0;
-        left: 0;
-        min-height: 100vh;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .loading {
-            position: relative;
-            width: 200px;
-            height: 100px;
-            background: variables.$gradient-liniar;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: var(--accentcolor);
-            box-shadow: variables.$box-shadow;
-            border-radius: 5px;
-            text-shadow: var(--accentcolor);
-            -webkit-box-reflect: below 40px linear-gradient(transparent, #0002);
-
-            h3 {
-                filter: variables.$filter-glow;
-                font-weight: 200;
-                overflow: hidden;
-                letter-spacing: 2px;
-                font-size: 2em;
-            }
-        }
+    header nav span{
+        color: var(--foregroundcolor);
+        text-decoration: none;
+        text-shadow: variables.$text-shadow;
+        font-weight: 400;
+        font-size: 1.5em;
+        margin: auto 1em;
+        filter: variables.$filter-glow;
     }
 }
 
