Fix file input and add delete
- Add delete button to every file
- Fix issue with the file input does not work with deleted files
- Add visible keyboard navigation hints

--- a/src/CZ.Azure.FileExchange/Components/FileProgress.razor
+++ b/src/CZ.Azure.FileExchange/Components/FileProgress.razor
@@ -8,16 +8,16 @@
 		@switch (State)
 		{
 			case UploadState.NotStarted:
-				<i class="gg-play-pause" style="color:gray;"></i>
+				<i class="gg-play-pause"></i>
 				break;
 			case UploadState.InProgrogress:
-				<i class="gg-play-button" style="color:green;"></i>
+				<i class="gg-play-button"></i>
 				break;
 			case UploadState.Succeeded:
-				<i class="gg-check" style="color:green;"></i>
+				<i class="gg-check"></i>
 				break;
 			case UploadState.Failed:
-				<i class="gg-danger" style="color:red;"></i>
+				<i class="gg-danger"></i>
 				break;
 		}
 	</div>
