--- a/src/CZ.Azure.FileExchange/Client/styles/components/_button.scss
+++ b/src/CZ.Azure.FileExchange/Client/styles/components/_button.scss
@@ -22,8 +22,11 @@ button.glass {
 
     transition: background 250ms, opacity 250ms ;
 
-    &:hover{
+    &:hover, &:focus{
         background: rgba(variables.$accentcolor-light, 0.4);
+    }
+    &:focus{
+        outline: solid 1px;
     }
 
     &:disabled{
