--- a/src/CZ.Azure.FileExchange/Client/styles/pages/_index.scss
+++ b/src/CZ.Azure.FileExchange/Client/styles/pages/_index.scss
@@ -58,10 +58,10 @@ section.upload {
     input[type=file] {
         position: absolute;
         font-size: 1em;
-        opacity: 0;
+        color: transparent;
         width: 100%;
         height: 10em;
-        top: 1em;
+        top: 0;
         cursor: pointer;
 
         // fix for the not needed button inside the input field
@@ -69,50 +69,97 @@ section.upload {
             display: none;
             pointer-events: none;
         }
+
+        &:active, &:focus{
+            outline: 1px solid variables.$foregroundcolor-dark;
+        }
     }
 }
 
-section{
+section.files {
     display: flex;
     flex-flow: column;
     gap: 0.5em;
 
-    div.file{
-        @include mixins.glass-pane();
+    > div {
         position: relative;
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-        line-height: 2em;
-        padding: 0 1em 0 3em;
 
-        div.name{
-            font-size: 0.8em;
-        }
+        &:hover, &:focus-within{
+            button{
+                opacity: 0.5;
+            }
 
-        div.progress{
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-
-            > span{
-                display: block;
-                text-align: left;
-                white-space: nowrap;
-                pointer-events: none;
-                font-size: 0.8em;
-                text-indent: 1em;
-                height: 100%;
-                background: rgba(variables.$accentcolor-light, 0.2);
+            div.file {
+                transform: translate(2em);
             }
         }
 
-        div.state{
-            display: flex;
-            align-items: center;
+        button {
+            opacity: 0;
+            position: absolute;
+            top: 1px;
+            left: 1px;
+            padding-left: 0.7em;
+            color: red;
+            height: 2em;
+            width: 2em;
+            font-size: 1em;
 
+            transition: opacity 250ms;
+
+            &:hover, &:focus{
+                opacity: 1;
+            }
+            
+            &:focus{
+                outline: 1px solid;
+                outline-offset: -3px;
+            }
+        }
+
+        div.file {
+            @include mixins.glass-pane();
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            align-content: center;
+            line-height: 2em;
+            padding: 0 1em 0 3em;
+
+            transition: transform 250ms;
+
+            div.name {
+                font-size: 0.8em;
+            }
+
+            div.progress {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+
+                > span {
+                    display: block;
+                    text-align: left;
+                    white-space: nowrap;
+                    pointer-events: none;
+                    font-size: 0.8em;
+                    text-indent: 1em;
+                    height: 100%;
+                    background: rgba(variables.$accentcolor-light, 0.2);
+                }
+            }
+
+            div.state {
+                display: flex;
+                align-items: center;
+                gap: 1em;
+
+                i {
+                    opacity: 0.5;
+                }
+            }
         }
     }
 }
