fixes all code style issues and make the project aware of nullable

--- a/src/CZ.Azure.FileExchange/Pages/Index.razor
+++ b/src/CZ.Azure.FileExchange/Pages/Index.razor
@@ -10,7 +10,7 @@
         </p>
     </section>
 
-    @if (SasUrl != null)
+    @if (sasUrl != null)
     {
         <section class="upload-result">
             <p>The code to download your files:</p>
