--- a/src/CZ.Azure.FileExchange/Pages/Download.razor.scss
+++ b/src/CZ.Azure.FileExchange/Pages/Download.razor.scss
@@ -1,5 +1,5 @@
-@use '../abstracts/variables';
-@use '../abstracts/mixins';
+@use 'abstracts/variables';
+@use 'abstracts/mixins';
 
 main.download{
 section.download-input{
