--- a/src/CZ.Azure.FileExchange/Shared/MainLayout.razor.scss
+++ b/src/CZ.Azure.FileExchange/Shared/MainLayout.razor.scss
@@ -1,4 +1,16 @@
-@use '../abstracts/variables';
+@use 'abstracts/variables';
+
+main{
+    width: 80vw;
+    margin: 0 auto;
+    padding-top: 1em;
+    margin-bottom: 1em;
+
+    section{
+        text-align: center;
+        margin-top: 1em;
+    }
+}
 
 header {
     width: 100%;
