--- a/src/CZ.Azure.FileExchange/Pages/Download.razor
+++ b/src/CZ.Azure.FileExchange/Pages/Download.razor
@@ -2,6 +2,7 @@
 @using global::Azure.Storage.Blobs
 @using global::Azure.Storage.Blobs.Models
 @inject HttpClient http
+@inject ILogger<Download> logger
 
 <PageTitle>Download - Azure File Exchange</PageTitle>
 
@@ -17,25 +18,25 @@
         <input type="text" id="txtguid" @bind="Code" @bind:event="oninput" />
         <button class="glass" disabled="@(!(Guid.TryParse( Code, out _)))" @onclick="LoadFiles">Load files</button>
     </section>
-
     <section>
         @foreach (var blob in blobs)
         {
             <div class="file">
                 <div class="name">@blob.Name</div>
                 <div class="size">@AutoFileSize(blob.Properties.ContentLength)</div>
-                <div class="archive" title="If true, it can take up to 15h to retrive the data!">Archived: @(blob.Properties.AccessTier == AccessTier.Archive)</div>
+                <div class="archive" title="If true, it can take up to 15h to retrive the data!">Archived:
+                    @(blob.Properties.AccessTier == AccessTier.Archive)</div>
                 @if (blob.Properties.AccessTier == AccessTier.Archive)
                 {
-                    <button @onclick="async () => await StartRetrivalFromArchive(blob.Name)"
-                        disabled="@(blob.Properties.ArchiveStatus == ArchiveStatus.RehydratePendingToHot ||
+                    <button @onclick="async () => await StartRetrivalFromArchive(blob.Name)" disabled="@(blob.Properties.ArchiveStatus == ArchiveStatus.RehydratePendingToHot ||
                         blob.Properties.ArchiveStatus == ArchiveStatus.RehydratePendingToCool)">
                         Retrive from archive
                     </button>
                 }
                 else
                 {
-                    <div class="link"><a href="@GetFileLink(blob.Name, (blob.Properties.AccessTier == AccessTier.Archive))"><i class="gg-software-download"></i></a></div>
+                    <div class="link"><a href="@GetFileLink(blob.Name, (blob.Properties.AccessTier == AccessTier.Archive))"><i
+                                class="gg-software-download"></i></a></div>
                 }
 
             </div>
