Try to make archive retrival work (#32)
* add docs how you can use your local storage to work

* add secrets support

* add secrets support and update packages

* add new endpoint so an azure event grid can send if a blob was changed in the tier

* implement the frontend side to retrive blobs

* cleanup new file

* cleanup function

* let retrival of blobs rock!

* try to fix the pipeline. (this solution would be sad)

* cleanup devocontainers file and update it to the latest and greatest

* add github actions extensions

* try to use build artifacts

* start to make changes to main.bicep

* try to make the yaml more robust

* fix main.yaml

* try to fix the deployment scripts

* fix dev container

* try to maybe improve deployment for linux

* try to fix deploy.ps1 paths for zip deploy

* now the bicep file is able to deploy for the current PR the app

* fix current deployment

* make it possible to deploy from main path too

* add deploy.ps1 to the github release

* make the bicep stuff more production ready

* change hostname to base url

* deploy events for PR branches automatically

* remove a hack we needed befor

* try to fix deployment

* try to fix supported version numbers

* try to fix the infra deployment

* fix bicep template for the event subscriptions

* fix pr commenting

* try to fix the comments

* make our deployment more modular

* update the build pipline to be more efficent

* fix build pipeline

* fix dotnet build / publish.

* try to fix azure deployment

* fix deploy web app script

* try to fix deployment

* fix even more parameters

* try to use the correct URL to download things while PR is running

* try it again

* add debugging

* debug more

* maybe this helps

* fix deployment

* try it again

* fix web app deployment

* try to add more debug information

* fix a long implemented bug

* fix event deployment

* try it again

* fix

--- a/src/CZ.Azure.FileExchange/Pages/Download.razor
+++ b/src/CZ.Azure.FileExchange/Pages/Download.razor
@@ -1,31 +1,45 @@
-﻿@page "/download"
+@page "/download"
 @using global::Azure.Storage.Blobs
 @using global::Azure.Storage.Blobs.Models
 @inject HttpClient http
+@inject ILogger<Download> logger
 
 <PageTitle>Download - Azure File Exchange</PageTitle>
 
 <main class="download">
-<section>
-    <p>
-        Download your files by inserting your code below.
-    </p>
-</section>
+    <section>
+        <p>
+            Download your files by inserting your code below.
+        </p>
+    </section>
 
-<section class="download-input">
-	<label for="txtguid" class="floating-label">Enter the download ID</label>
-	<input type="text" id="txtguid" @bind="Code" @bind:event="oninput"/>
-	<button class="glass" disabled="@(!(Guid.TryParse( Code, out _)))" @onclick="LoadFiles">Load files</button>
-</section>
+    <section class="download-input">
+        <label for="txtguid" class="floating-label">Enter the download ID</label>
+        <input type="text" id="txtguid" @bind="Code" @bind:event="oninput" />
+        <button class="glass" disabled="@(!(Guid.TryParse( Code, out _)))" @onclick="LoadFiles">Load files</button>
+    </section>
+    <section>
+        @foreach (var blob in blobs)
+        {
+            <div class="file">
+                <div class="name">@blob.Name</div>
+                <div class="size">@AutoFileSize(blob.Properties.ContentLength)</div>
+                <div class="archive" title="If true, it can take up to 15h to retrive the data!">Archived:
+                    @(blob.Properties.AccessTier == AccessTier.Archive)</div>
+                @if (blob.Properties.AccessTier == AccessTier.Archive)
+                {
+                    <button @onclick="async () => await StartRetrivalFromArchive(blob.Name)" disabled="@(blob.Properties.ArchiveStatus == ArchiveStatus.RehydratePendingToHot ||
+                        blob.Properties.ArchiveStatus == ArchiveStatus.RehydratePendingToCool)">
+                        Retrive from archive
+                    </button>
+                }
+                else
+                {
+                    <div class="link"><a href="@GetFileLink(blob.Name, (blob.Properties.AccessTier == AccessTier.Archive))"><i
+                                class="gg-software-download"></i></a></div>
+                }
 
-<section>
-	@foreach (var blob in blobs)
-	{
-		<div class="file">
-			<div class="name">@blob.Name</div>
-			<div class="size">@AutoFileSize(blob.Properties.ContentLength)</div>
-			<div class="link"><a href="@GetFileLink(blob.Name)"><i class="gg-software-download"></i></a></div>
-		</div>
-	}
-</section>
+            </div>
+        }
+    </section>
 </main>
